--- a/kernel/kernel.vcxproj
+++ b/kernel/kernel.vcxproj
@@ -126,7 +126,8 @@
       <SubSystem>Native</SubSystem>
     </Lib>
     <PostBuildEvent>
-      <Command>copy /y /b $(OutDir)$(TargetName)$(TargetExt) $(SolutionDir)image\$(TargetName)$(TargetExt)
+      <Command>copy /y /b $(OutDir)$(TargetName)$(TargetExt) E:\$(TargetName)$(TargetExt)
+copy /y /b $(OutDir)$(TargetName)$(TargetExt) $(SolutionDir)image\$(TargetName)$(TargetExt)
 fasm $(ProjectDir)apinit.asm</Command>
     </PostBuildEvent>
     <CopyFileToFolders>
@@ -216,7 +217,8 @@ fasm $(ProjectDir)apinit.asm</Command>
       <LinkTimeCodeGeneration>false</LinkTimeCodeGeneration>
     </Lib>
     <PostBuildEvent>
-      <Command>copy /y /b $(OutDir)$(TargetName)$(TargetExt) $(SolutionDir)image\$(TargetName)$(TargetExt)
+      <Command>copy /y /b $(OutDir)$(TargetName)$(TargetExt) E:\$(TargetName)$(TargetExt)
+copy /y /b $(OutDir)$(TargetName)$(TargetExt) $(SolutionDir)image\$(TargetName)$(TargetExt)
 fasm $(ProjectDir)apinit.asm</Command>
     </PostBuildEvent>
     <Bscmake>
