--- a/kernel/kernel.vcxproj.filters
+++ b/kernel/kernel.vcxproj.filters
@@ -25,15 +25,6 @@
     <Filter Include="Исходные файлы\SMBIOS">
       <UniqueIdentifier>{078ed1ed-6fef-436f-a83b-bdb78a1d6abc}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Исходные файлы\vfs">
-      <UniqueIdentifier>{8d1f0272-abb6-47cb-bc1b-d5d86937e2b9}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Исходные файлы\fs">
-      <UniqueIdentifier>{1f010baf-6d2d-41ba-9da1-03497bf37088}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Исходные файлы\fs\exFAT">
-      <UniqueIdentifier>{1f52f8cf-d18c-4916-8de3-5d460eb1ccf2}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Исходные файлы\PECOFF">
       <UniqueIdentifier>{20c09874-2e49-4278-8489-883ba3bad9ae}</UniqueIdentifier>
     </Filter>
@@ -45,6 +36,24 @@
     </Filter>
     <Filter Include="Исходные файлы\intrinsic">
       <UniqueIdentifier>{7b9854e1-a525-4ed1-ae7c-455ee790b4b7}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Исходные файлы\disk">
+      <UniqueIdentifier>{504dea58-6663-4e0a-85f6-a46d0196defd}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Исходные файлы\disk\fs">
+      <UniqueIdentifier>{1f010baf-6d2d-41ba-9da1-03497bf37088}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Исходные файлы\disk\fs\exFAT">
+      <UniqueIdentifier>{1f52f8cf-d18c-4916-8de3-5d460eb1ccf2}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Исходные файлы\disk\fs\FAT32">
+      <UniqueIdentifier>{025cc7f0-da2f-4ce9-bac6-5e059408ee9e}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Исходные файлы\disk\vfs">
+      <UniqueIdentifier>{8d1f0272-abb6-47cb-bc1b-d5d86937e2b9}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Исходные файлы\disk\layout">
+      <UniqueIdentifier>{ca36d202-375a-4756-b0e0-e6438647e4ed}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -220,13 +229,13 @@
       <Filter>Исходные файлы\glm</Filter>
     </ClCompile>
     <ClCompile Include="vfs.file.ixx">
-      <Filter>Исходные файлы\vfs</Filter>
+      <Filter>Исходные файлы\disk\vfs</Filter>
     </ClCompile>
     <ClCompile Include="fs.exFAT.Volume.ixx">
-      <Filter>Исходные файлы\fs\exFAT</Filter>
+      <Filter>Исходные файлы\disk\fs\exFAT</Filter>
     </ClCompile>
     <ClCompile Include="fs.exFAT.structures.ixx">
-      <Filter>Исходные файлы\fs\exFAT</Filter>
+      <Filter>Исходные файлы\disk\fs\exFAT</Filter>
     </ClCompile>
     <ClCompile Include="translator.ixx">
       <Filter>Исходные файлы</Filter>
@@ -404,6 +413,27 @@
     </ClCompile>
     <ClCompile Include="HPETTimer.ixx">
       <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="fs.FAT32.structures.ixx">
+      <Filter>Исходные файлы\disk\fs\FAT32</Filter>
+    </ClCompile>
+    <ClCompile Include="disk.layout.mbr.ixx">
+      <Filter>Исходные файлы\disk\layout</Filter>
+    </ClCompile>
+    <ClCompile Include="disk.layout.gpt.ixx">
+      <Filter>Исходные файлы\disk\layout</Filter>
+    </ClCompile>
+    <ClCompile Include="vfs.directory.ixx">
+      <Filter>Исходные файлы\disk\vfs</Filter>
+    </ClCompile>
+    <ClCompile Include="vfs.filesystem.ixx">
+      <Filter>Исходные файлы\disk\vfs</Filter>
+    </ClCompile>
+    <ClCompile Include="disk.RAMDisk.ixx">
+      <Filter>Исходные файлы\disk</Filter>
+    </ClCompile>
+    <ClCompile Include="driver.RAMDisk.ixx">
+      <Filter>Исходные файлы\driver</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
