--- a/kernel/kernel.vcxproj
+++ b/kernel/kernel.vcxproj
@@ -87,14 +87,14 @@
       <OmitDefaultLibName>true</OmitDefaultLibName>
       <BasicRuntimeChecks>Default</BasicRuntimeChecks>
       <SupportJustMyCode>false</SupportJustMyCode>
-      <DebugInformationFormat>None</DebugInformationFormat>
+      <DebugInformationFormat>OldStyle</DebugInformationFormat>
       <EnableEnhancedInstructionSet>NotSet</EnableEnhancedInstructionSet>
       <AdditionalOptions>/utf-8 %(AdditionalOptions)</AdditionalOptions>
       <IntrinsicFunctions>true</IntrinsicFunctions>
     </ClCompile>
     <Link>
       <SubSystem>Native</SubSystem>
-      <GenerateDebugInformation>false</GenerateDebugInformation>
+      <GenerateDebugInformation>DebugFull</GenerateDebugInformation>
       <Driver>
       </Driver>
       <EntryPointSymbol>mainCRTStartup</EntryPointSymbol>
@@ -126,8 +126,8 @@
       <SubSystem>Native</SubSystem>
     </Lib>
     <PostBuildEvent>
-      <Command>copy /y /b $(OutDir)$(TargetName)$(TargetExt) E:\$(TargetName)$(TargetExt)
-copy /y /b $(OutDir)$(TargetName)$(TargetExt) $(SolutionDir)image\$(TargetName)$(TargetExt)
+      <Command>xcopy /y /d $(OutDir)$(TargetName)$(TargetExt) E:\$(TargetName)$(TargetExt)
+xcopy /y /d $(OutDir)$(TargetName)$(TargetExt) $(SolutionDir)image\$(TargetName)$(TargetExt)
 fasm $(ProjectDir)apinit.asm</Command>
     </PostBuildEvent>
     <CopyFileToFolders>
@@ -148,7 +148,7 @@ fasm $(ProjectDir)apinit.asm</Command>
       <LanguageStandard_C>stdc17</LanguageStandard_C>
       <ExceptionHandling>false</ExceptionHandling>
       <BufferSecurityCheck>false</BufferSecurityCheck>
-      <DebugInformationFormat>None</DebugInformationFormat>
+      <DebugInformationFormat>OldStyle</DebugInformationFormat>
       <Optimization>MaxSpeed</Optimization>
       <AssemblerOutput>AssemblyAndSourceCode</AssemblerOutput>
       <AssemblerListingLocation>$(IntDir)Asm\</AssemblerListingLocation>
@@ -175,7 +175,7 @@ fasm $(ProjectDir)apinit.asm</Command>
       <SubSystem>Native</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <GenerateDebugInformation>false</GenerateDebugInformation>
+      <GenerateDebugInformation>DebugFull</GenerateDebugInformation>
       <Driver>
       </Driver>
       <EntryPointSymbol>mainCRTStartup</EntryPointSymbol>
@@ -217,8 +217,8 @@ fasm $(ProjectDir)apinit.asm</Command>
       <LinkTimeCodeGeneration>false</LinkTimeCodeGeneration>
     </Lib>
     <PostBuildEvent>
-      <Command>copy /y /b $(OutDir)$(TargetName)$(TargetExt) E:\$(TargetName)$(TargetExt)
-copy /y /b $(OutDir)$(TargetName)$(TargetExt) $(SolutionDir)image\$(TargetName)$(TargetExt)
+      <Command>xcopy /y /d $(OutDir)$(TargetName)$(TargetExt) E:\$(TargetName)$(TargetExt)
+xcopy /y /d $(OutDir)$(TargetName)$(TargetExt) $(SolutionDir)image\$(TargetName)$(TargetExt)
 fasm $(ProjectDir)apinit.asm</Command>
     </PostBuildEvent>
     <Bscmake>
@@ -486,6 +486,7 @@ fasm $(ProjectDir)apinit.asm</Command>
     <ClCompile Include="sl.initializer_list.ixx" />
     <ClCompile Include="sl.iterator.ixx" />
     <ClCompile Include="sl.ixx" />
+    <ClCompile Include="sl.list.ixx" />
     <ClCompile Include="sl.math.ixx" />
     <ClCompile Include="sl.memory.ixx" />
     <ClCompile Include="sl.numbers.ixx" />
