--- a/boot/boot.vcxproj
+++ b/boot/boot.vcxproj
@@ -98,6 +98,10 @@
     <Lib>
       <AdditionalDependencies>$(SolutionDir)\gnu-efi\inc</AdditionalDependencies>
     </Lib>
+    <PostBuildEvent>
+      <Command>xcopy /y /d $(OutDir)$(TargetName)$(TargetExt) E:\efi\boot\$(TargetName)$(PlatformTargetAsMSBuildArchitecture)$(TargetExt)
+xcopy /y /d $(OutDir)$(TargetName)$(TargetExt) $(SolutionDir)image\efi\boot\$(TargetName)$(PlatformTargetAsMSBuildArchitecture)$(TargetExt)</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
@@ -145,6 +149,10 @@
     <Lib>
       <AdditionalDependencies>$(SolutionDir)\gnu-efi\inc</AdditionalDependencies>
     </Lib>
+    <PostBuildEvent>
+      <Command>xcopy /y /d $(OutDir)$(TargetName)$(TargetExt) E:\efi\boot\$(TargetName)$(PlatformTargetAsMSBuildArchitecture)$(TargetExt)
+xcopy /y /d $(OutDir)$(TargetName)$(TargetExt) $(SolutionDir)image\efi\boot\$(TargetName)$(PlatformTargetAsMSBuildArchitecture)$(TargetExt)</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\kernel\PE.ixx">
