--- a/boot/boot.vcxproj
+++ b/boot/boot.vcxproj
@@ -99,8 +99,8 @@
       <AdditionalDependencies>$(SolutionDir)\gnu-efi\inc</AdditionalDependencies>
     </Lib>
     <PostBuildEvent>
-      <Command>xcopy /y /d $(OutDir)$(TargetName)$(TargetExt) E:\efi\boot\$(TargetName)$(PlatformTargetAsMSBuildArchitecture)$(TargetExt)
-xcopy /y /d $(OutDir)$(TargetName)$(TargetExt) $(SolutionDir)image\efi\boot\$(TargetName)$(PlatformTargetAsMSBuildArchitecture)$(TargetExt)</Command>
+      <Command>xcopy /y /d $(OutDir)$(TargetName)$(TargetExt) E:\efi\boot\$(TargetName)$(PlatformTargetAsMSBuildArchitecture)$(TargetExt)*
+xcopy /y /d $(OutDir)$(TargetName)$(TargetExt) $(SolutionDir)image\efi\boot\$(TargetName)$(PlatformTargetAsMSBuildArchitecture)$(TargetExt)*</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -150,8 +150,8 @@ xcopy /y /d $(OutDir)$(TargetName)$(TargetExt) $(SolutionDir)image\efi\boot\$(Ta
       <AdditionalDependencies>$(SolutionDir)\gnu-efi\inc</AdditionalDependencies>
     </Lib>
     <PostBuildEvent>
-      <Command>xcopy /y /d $(OutDir)$(TargetName)$(TargetExt) E:\efi\boot\$(TargetName)$(PlatformTargetAsMSBuildArchitecture)$(TargetExt)
-xcopy /y /d $(OutDir)$(TargetName)$(TargetExt) $(SolutionDir)image\efi\boot\$(TargetName)$(PlatformTargetAsMSBuildArchitecture)$(TargetExt)</Command>
+      <Command>xcopy /y /d $(OutDir)$(TargetName)$(TargetExt) E:\efi\boot\$(TargetName)$(PlatformTargetAsMSBuildArchitecture)$(TargetExt)*
+xcopy /y /d $(OutDir)$(TargetName)$(TargetExt) $(SolutionDir)image\efi\boot\$(TargetName)$(PlatformTargetAsMSBuildArchitecture)$(TargetExt)*</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
