--- a/kernel/kernel.vcxproj
+++ b/kernel/kernel.vcxproj
@@ -126,8 +126,8 @@
       <SubSystem>Native</SubSystem>
     </Lib>
     <PostBuildEvent>
-      <Command>xcopy /y /d $(OutDir)$(TargetName)$(TargetExt) E:\$(TargetName)$(TargetExt)
-xcopy /y /d $(OutDir)$(TargetName)$(TargetExt) $(SolutionDir)image\$(TargetName)$(TargetExt)
+      <Command>xcopy /y /d $(OutDir)$(TargetName)$(TargetExt) E:\$(TargetName)$(TargetExt)*
+xcopy /y /d $(OutDir)$(TargetName)$(TargetExt) $(SolutionDir)image\$(TargetName)$(TargetExt)*
 fasm $(ProjectDir)apinit.asm</Command>
     </PostBuildEvent>
     <CopyFileToFolders>
@@ -220,8 +220,8 @@ fasm $(ProjectDir)apinit.asm</Command>
       <LinkTimeCodeGeneration>false</LinkTimeCodeGeneration>
     </Lib>
     <PostBuildEvent>
-      <Command>xcopy /y /d $(OutDir)$(TargetName)$(TargetExt) E:\$(TargetName)$(TargetExt)
-xcopy /y /d $(OutDir)$(TargetName)$(TargetExt) $(SolutionDir)image\$(TargetName)$(TargetExt)
+      <Command>xcopy /y /d $(OutDir)$(TargetName)$(TargetExt) E:\$(TargetName)$(TargetExt)*
+xcopy /y /d $(OutDir)$(TargetName)$(TargetExt) $(SolutionDir)image\$(TargetName)$(TargetExt)*
 fasm $(ProjectDir)apinit.asm</Command>
     </PostBuildEvent>
     <Bscmake>
@@ -475,7 +475,6 @@ fasm $(ProjectDir)apinit.asm</Command>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">false</ExcludedFromBuild>
     </ClCompile>
     <ClCompile Include="sl.algorithm.ixx" />
-    <ClCompile Include="sl.allocator.ixx" />
     <ClCompile Include="sl.atomic.ixx" />
     <ClCompile Include="sl.bit.ixx" />
     <ClCompile Include="sl.byte.ixx" />
@@ -491,7 +490,10 @@ fasm $(ProjectDir)apinit.asm</Command>
     <ClCompile Include="sl.iterator.ixx" />
     <ClCompile Include="sl.iterator_core.ixx" />
     <ClCompile Include="sl.ixx" />
-    <ClCompile Include="sl.list.ixx" />
+    <ClCompile Include="sl.list.ixx">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
+    </ClCompile>
     <ClCompile Include="sl.math.ixx" />
     <ClCompile Include="sl.memory.ixx" />
     <ClCompile Include="sl.numbers.ixx" />
