--- a/kernel/kernel.vcxproj.filters
+++ b/kernel/kernel.vcxproj.filters
@@ -456,6 +456,9 @@
     <ClCompile Include="GDT.ixx">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="vcruntime.ixx">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <FASM Include="bootloader.asm">
