--- a/kernel/kernel.vcxproj.filters
+++ b/kernel/kernel.vcxproj.filters
@@ -471,6 +471,12 @@
     <ClCompile Include="fs.FAT.structures.ixx">
       <Filter>Исходные файлы\disk\fs\FAT</Filter>
     </ClCompile>
+    <ClCompile Include="sl.compat.ixx">
+      <Filter>Исходные файлы\std</Filter>
+    </ClCompile>
+    <ClCompile Include="sl.array.ixx">
+      <Filter>Исходные файлы\std</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <FASM Include="bootloader.asm">
